--- a/sass/product.scss
+++ b/sass/product.scss
@@ -20,7 +20,7 @@
   overflow: hidden;
 }
 
-.product__slider-wrapper > input {
+.product__input {
   display: none;
 }
 
@@ -52,7 +52,7 @@
   background-color: violet;
 }
 
-.product__slider-wrapper .product__controls {
+.product__controls {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -62,7 +62,7 @@
   border-radius: 10px;
 }
 
-.product__slider-wrapper label {
+.product__label {
   cursor: pointer;
   position: relative;
   display: inline-block;
@@ -73,23 +73,15 @@
   margin: 0 2px;
 }
 
-.product__slider-wrapper label:hover,
-#slide1:checked ~ .controls label:nth-of-type(1),
-#slide2:checked ~ .controls label:nth-of-type(2),
-#slide3:checked ~ .controls label:nth-of-type(3),
-#slide4:checked ~ .controls label:nth-of-type(4),
-#slide5:checked ~ .controls label:nth-of-type(5),
-#slide6:checked ~ .controls label:nth-of-type(6) {
+.product__label:hover,
+#slide1:checked ~ .product__label:nth-of-type(1),
+#slide2:checked ~ .product__label:nth-of-type(2),
+#slide3:checked ~ .product__label:nth-of-type(3),
+#slide4:checked ~ .product__label:nth-of-type(4),
+#slide5:checked ~ .product__label:nth-of-type(5),
+#slide6:checked ~ .product__label:nth-of-type(6) {
   background-image: url("../img/radio_checked.png");
 }
-
-// .product__slide {
-//   height: inherit;
-//   opacity: 0;
-//   position: absolute;
-//   width: inherit;
-//   background-repeat: no-repeat;
-// }
 
 #slide1:checked ~ .product__slider > .slide1,
 #slide2:checked ~ .product__slider > .slide2,
