--- a/sass/header.scss
+++ b/sass/header.scss
@@ -21,6 +21,7 @@
   cursor: text;
   color: #656565;
   padding: 5px;
+  padding-right: 24px;
   border: none;
   border-bottom: 1px solid #d5d5d5;
 
