--- a/sass/product.scss
+++ b/sass/product.scss
@@ -74,12 +74,12 @@
 }
 
 .product__label:hover,
-#slide1:checked ~ .product__label:nth-of-type(1),
-#slide2:checked ~ .product__label:nth-of-type(2),
-#slide3:checked ~ .product__label:nth-of-type(3),
-#slide4:checked ~ .product__label:nth-of-type(4),
-#slide5:checked ~ .product__label:nth-of-type(5),
-#slide6:checked ~ .product__label:nth-of-type(6) {
+#slide1:checked ~ .product__controls .product__label:nth-of-type(1),
+#slide2:checked ~ .product__controls .product__label:nth-of-type(2),
+#slide3:checked ~ .product__controls .product__label:nth-of-type(3),
+#slide4:checked ~ .product__controls .product__label:nth-of-type(4),
+#slide5:checked ~ .product__controls .product__label:nth-of-type(5),
+#slide6:checked ~ .product__controls .product__label:nth-of-type(6) {
   background-image: url("../img/radio_checked.png");
 }
 
